# git-remote-dokuwiki

./: .env  .envrc  .gitignore  Cargo.toml  README.md  build.rs  git-remote-dokuwiki.1
.github/workflows/: release.yml
src/: dokuwiki.rs  fast_export.rs  fast_import.rs  main.rs  protocol.rs  verbosity.rs
tests/: conftest.py  docker-compose.yml  test_limited_access.py  test_namespace_operations.py  test_root_operations.py
tests/config/: acl.auth.php  local.php  users.auth.php
