[package]
name = "git-remote-dokuwiki"
version = "0.2.1"
edition = "2021"
description = "Git remote helper for DokuWiki"
license = "AGPL-3.0"
repository = "https://github.com/jvasile/git-remote-dokuwiki"

[[bin]]
name = "git-remote-dokuwiki"
path = "src/main.rs"

[dependencies]
# HTTP and XML-RPC
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
xmlrpc = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing
url = "2.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cookie persistence
cookie_store = { version = "0.21", features = ["serde_json"] }

# For TTY password prompts
rpassword = "7.3"

# Home directory
dirs = "5.0"
iso8601 = "0.4"

[dev-dependencies]
tempfile = "3.10"
