[package]
name = "git-remote-dokuwiki"
version = "0.4.1"
edition = "2021"
description = "Git remote helper for DokuWiki"
license = "AGPL-3.0"
repository = "https://github.com/jvasile/git-remote-dokuwiki"

[[bin]]
name = "git-remote-dokuwiki"
path = "src/main.rs"

[dependencies]
# HTTP
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding for media files
base64 = "0.22"

# URL parsing
url = "2.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cookie persistence
cookie_store = { version = "0.21", features = ["serde_json"] }

# For TTY password prompts
rpassword = "7.3"

# Home directory
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"

[package.metadata.deb]
maintainer = "James Vasile <james@jamesvasile.com>"
section = "vcs"
assets = [
    ["target/release/git-remote-dokuwiki", "usr/bin/", "755"],
    ["git-remote-dokuwiki.1", "usr/share/man/man1/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/git-remote-dokuwiki", dest = "/usr/bin/git-remote-dokuwiki", mode = "755" },
    { source = "git-remote-dokuwiki.1", dest = "/usr/share/man/man1/git-remote-dokuwiki.1", mode = "644" },
]
